policies/standard/pod_host_pid/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodhostpidpolicy
  annotations:
    description: >-
      Disallows sharing of host PID by pod containers.
spec:
  crd:
    spec:
      names:
        kind: K8sPodHostPidPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodhostpidpolicy

        violation[{"msg": msg}] {
          o := input_object[_]
          input_pid_enabled(o)
          msg := sprintf("Sharing host PID is not allowed: %v", [input.review.object.metadata.name])
        }

        input_object[o] {
          input.review.object.kind == "Pod"
          o := input.review.object
        }

        input_object[o] {
          input.review.object.kind == "CronJob"
          o := input.review.object.spec.jobTemplate.spec.template
        }

        input_object[o] {
          o := input.review.object.spec.template
        }


        input_pid_enabled(o) {
          o.spec.hostPID
        }
